# sourdough-calculator

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: formulae.py  main.py  textual_app.py
