[project]
name = "sourdough-calculator"
description = "Streamlit app to calculate sourdough"
version = "0.0.0"
authors = [
    { name = "Bastien Boutonnet" },
]

dependencies = [
    "pydantic",
    "streamlit",
    "jinja2>=3.0.0",
    "watchdog"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.1, < 8.0.0",
    "black>=22.3.0",
    "mypy>=0.982",
    "isort>=5.10.1",
    "pre-commit>=2.20.0",
    "types-PyYAML >= 6.0.12",
    "flake8>=5.0.4",
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
